xee-xpath-outer/src/ir/snapshots/xee_xpath_outer__ir__ast_ir__tests__comma2.snap
---
source: xee-xpath-outer/src/ir/ast_ir.rs
expression: "convert_xpath(\"1, 2, 3\")"
---
Ok(
    Spanned {
        value: FunctionDefinition(
            FunctionDefinition {
                params: [
                    Param {
                        name: Name(
                            "v0",
                        ),
                        type_: None,
                    },
                    Param {
                        name: Name(
                            "v1",
                        ),
                        type_: None,
                    },
                    Param {
                        name: Name(
                            "v2",
                        ),
                        type_: None,
                    },
                ],
                return_type: None,
                body: Spanned {
                    value: Let(
                        Let {
                            name: Name(
                                "v5",
                            ),
                            var_expr: Spanned {
                                value: Binary(
                                    Binary {
                                        left: Spanned {
                                            value: Const(
                                                Integer(
                                                    1,
                                                ),
                                            ),
                                            span: 0..1,
                                        },
                                        op: Comma,
                                        right: Spanned {
                                            value: Const(
                                                Integer(
                                                    2,
                                                ),
                                            ),
                                            span: 3..4,
                                        },
                                    },
                                ),
                                span: 0..4,
                            },
                            return_expr: Spanned {
                                value: Binary(
                                    Binary {
                                        left: Spanned {
                                            value: Variable(
                                                Name(
                                                    "v5",
                                                ),
                                            ),
                                            span: 0..4,
                                        },
                                        op: Comma,
                                        right: Spanned {
                                            value: Const(
                                                Integer(
                                                    3,
                                                ),
                                            ),
                                            span: 6..7,
                                        },
                                    },
                                ),
                                span: 0..7,
                            },
                        },
                    ),
                    span: 0..7,
                },
            },
        ),
        span: 0..7,
    },
)
