xee-xpath-outer/src/ir/snapshots/xee_xpath_outer__ir__ast_ir__tests__for_expr.snap
---
source: xee-xpath-outer/src/ir/ast_ir.rs
expression: "convert_expr_single(\"for $x in 1 return 2\")"
---
Ok(
    Spanned {
        value: Map(
            Map {
                context_names: ContextNames {
                    item: Name(
                        "v0",
                    ),
                    position: Name(
                        "v2",
                    ),
                    last: Name(
                        "v3",
                    ),
                },
                var_atom: Spanned {
                    value: Const(
                        Integer(
                            1,
                        ),
                    ),
                    span: 10..11,
                },
                return_expr: Spanned {
                    value: Atom(
                        Spanned {
                            value: Const(
                                Integer(
                                    2,
                                ),
                            ),
                            span: 19..20,
                        },
                    ),
                    span: 19..20,
                },
            },
        ),
        span: 0..20,
    },
)
