xee-xpath-outer/src/ir/snapshots/xee_xpath_outer__ir__ast_ir__tests__instance_of_kind_test.snap
---
source: xee-xpath-outer/src/ir/ast_ir.rs
expression: "convert_expr_single(\"1 instance of node()\")"
---
Ok(
    Spanned {
        value: InstanceOf(
            InstanceOf {
                atom: Spanned {
                    value: Const(
                        Integer(
                            1,
                        ),
                    ),
                    span: 0..1,
                },
                sequence_type: Item(
                    Item {
                        item_type: KindTest(
                            Any,
                        ),
                        occurrence: One,
                    },
                ),
            },
        ),
        span: 0..20,
    },
)
