xee-xpath-outer/src/ir/snapshots/xee_xpath_outer__ir__ast_ir__tests__integer.snap
---
source: xee-xpath-outer/src/ir/ast_ir.rs
expression: "convert_expr_single(\"1\")"
---
Ok(
    Spanned {
        value: Atom(
            Spanned {
                value: Const(
                    Integer(
                        1,
                    ),
                ),
                span: 0..1,
            },
        ),
        span: 0..1,
    },
)
